// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quantum utils determines OU after other pieces (new piece was captured) 1`] = `
Object {
  "fulls": Array [
    "Fu",
    "Gi",
    "Hi",
    "Ka",
    "Ke",
    "Ki",
    "Ky",
    "Ou",
  ],
  "kinds": Array [
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Hi",
      "Ki",
      "Ou",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Hi",
      "Ki",
      "Ou",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
    ],
  ],
}
`;

exports[`Quantum utils determines to 2 KEs and exhausts it 1`] = `
Object {
  "fulls": Array [
    "Ke",
  ],
  "kinds": Array [
    Array [
      "Ke",
    ],
    Array [
      "Ke",
    ],
  ],
}
`;

exports[`Quantum utils determines to 2 KEs and exhausts it 2`] = `
Object {
  "fulls": Array [
    "Ke",
  ],
  "kinds": Array [
    Array [
      "Ke",
    ],
    Array [
      "Ke",
    ],
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ki",
      "Ky",
      "Ou",
    ],
  ],
}
`;

exports[`Quantum utils determines to HI after doing HI move and exhausts it 1`] = `
Object {
  "fulls": Array [
    "Hi",
  ],
  "kinds": Array [
    Array [
      "Hi",
    ],
  ],
}
`;

exports[`Quantum utils determines to KE after doing KE jump 1`] = `
Object {
  "fulls": Array [],
  "kinds": Array [
    Array [
      "Ke",
    ],
  ],
}
`;

exports[`Quantum utils determines to KI,HI,OU after going bKekward 1`] = `
Object {
  "fulls": Array [],
  "kinds": Array [
    Array [
      "Hi",
      "Ki",
      "Ou",
    ],
  ],
}
`;

exports[`Quantum utils doesn't determine without move 1`] = `
Object {
  "fulls": Array [],
  "kinds": Array [
    Array [
      "Fu",
      "Gi",
      "Hi",
      "Ka",
      "Ke",
      "Ki",
      "Ky",
      "Ou",
    ],
  ],
}
`;
